[tool.poetry]
name = "dailypublish"
version = "0.1.0"
description = ""
authors = ["EmptyChan <chen19941018@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pymongo = "*"
redis = "*"
envparse = "*"
requests = "*"
numpy = "*"
pandas = "*"
bert-serving-client = "*"
scikit-learn = "*"
networkx = "*"
tok = "*"
langid = "*"
jieba = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
