[tool.poetry]
name = "dailypublish"
version = "0.1.0"
description = ""
authors = ["EmptyChan <chen19941018@live.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "*"
redis = "*"
envparse = "*"
requests = "*"
numpy = "*"
pandas = "*"
bert-serving-client = "*"
scikit-learn = "*"
networkx = "*"
tok = "*"
langid = "*"
jieba = "*"
pkuseg = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
